# on-liner

./: README.md  onliner.py  onliner.yml  pylintrc  setup.cfg  setup.py  tox.ini
onliner/: __main__.py  checker.py  configuration.py  notifier.py
