[metadata]
name = onliner
summary = Simple application checking if a host is online and if not, it sends notifications
description-file = README.rst
home-page = https://github.com/thozza/on-liner
author = Tomas Hozza
requres-python = >= 3.4
keywords =
    on-liner
    onliner
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4


[files]
packages =
    onliner

[entry_points]
console_scripts =
    onliner = onliner.__main__.main()

[pbr]
warnerrors = True
autodoc_tree_index_modules = True
autodoc_index_modules = True

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = True

